<resources>
    <string name="app_name">KoinGHub</string>

    <string name="repo_details">%s * %d stars this month</string>

    <string name="unknown">Unknown</string>

    <string name="error_loading_repos">Error loading the repositories</string>

    <!-- Repo details -->
    <string name="start">Stars</string>
    <string name="forks">Forks</string>
    <string name="watch">Watch</string>
    <string name="description">Description</string>
    <string name="language">Language: </string>
</resources>
